fix(styles): resolve PP Eiko font loading issue on Safari

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,8 +59,8 @@
 @font-face {
   font-family: 'PP Eiko';
   src: url('~/assets/fonts/PPEiko-ItalicLight.woff2') format('woff2');
-  font-weight: 300;
-  font-style: italic;
+  font-weight: 100 900;
+  font-style: normal italic;
   font-display: swap;
 }
 
